--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -61,7 +61,12 @@
 		<tbody>
 			<tr ng-repeat="data in askModalObj.init.traceData.traceWorks track by $index" ng-style="data.isReadOnly ? (group1 ? {'cursor': 'pointer'} : {}) : (isEditable && !askModalObj.isOldTrace) ? {'cursor': 'pointer'} : {}" style="color: #337AB7;" ng-dblclick="data.isReadOnly ? (group1 ? askModal(data, $index) : '') : (isEditable && !askModalObj.isOldTrace) ? askModal(data, $index) : ''">
 				<td style="text-align: center;  white-space: nowrap;">{{ $index + 1 + ((askModalObj.init.currentPage - 1) * askModalObj.init.itemsPerPage) }}</td>
-				<td style="text-align: center; white-space: nowrap;"><span title="{{ data.uploadStatusDesc }}">{{ data.uploadStatusCode }}</span></td>
+				<td style="text-align: center; white-space: nowrap;">
+					<span title="{{ data.uploadStatusDesc }}" ng-hide="data.uploadStatusCode == '0000I'">
+					{{ data.uploadStatusCode }}
+					</span>
+					<i class="fa fa-check-circle fa-fw" ng-show="data.uploadStatusCode == '0000I'" style="color: #388c0d;" title="ส่งสำเร็จ"></i>
+				</td>
 				<td style="text-align: center; white-space: nowrap;">{{ data.createdDateTime | date : gb_dateTimeFormat }}</td>
 				<td style="white-space: nowrap;">{{ data.resultText }}</td>
 				<td style="text-align: center; white-space: nowrap;">{{ data.tel }}</td>
