--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -89,7 +89,8 @@
 										<div class="form-group">
 											<label class="col-md-3 control-label input-sm">ชื่อ</label>
 										    <div class="col-md-9">
-										    	<input type="text" tabindex="1" id="name" class="form-control input-sm" placeholder="ชื่อผู้ซื้อ" ng-model="formData.name" ng-focus="formData.name = null">
+										    	<input type="text" tabindex="1" id="name" class="form-control input-sm" placeholder="ชื่อผู้ซื้อ" ng-model="formData.name" 
+										    		   typeahead="name for name in orderNameLst | filter: $viewValue">
 										    </div>
 										</div>
 										<div class="form-group">
