--- a/backend/src/main/webapp/app/views/manageOrder/moveCondition.html
+++ b/backend/src/main/webapp/app/views/manageOrder/moveCondition.html
@@ -19,12 +19,16 @@
 			<input type="number" class="form-control input-sm" placeholder="ราคา" ng-model="moveOrderData.price" ng-disabled="moveOrderData.operator == 3">
 			<span class="input-group-addon">บาท</span>
 		</div>
-		<!-- <div>
-			<div class="checkbox" ng-show="formData.orderType == 1">
+		
+		
+		<div>
+			<div class="checkbox" ng-show="formData.orderType == 51">
 				<label>
-			      <input type="checkbox" ng-model="moveOrderData.isIncludeTod" ng-true-value="true" ng-false-value="false"> รวมโต๊ดด้วย
+			      <input type="checkbox" ng-model="moveOrderData.isApplyRestricted" ng-true-value="true" ng-false-value="false"> ใช้เลขปิด
 			    </label>
 		    </div>
-		</div> -->
+		</div>
+		
+		
    </div>
 </div>
