--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -192,12 +192,19 @@
 				                		<span class="label label-success" style="font-size: 100%; color: black;">2 ตัวล่าง : <span style="color: #bd340b;">{{ formData.result2 }}</span></span>
 				                	</div>
 					                <div class="form-group input-group input-group-sm" style="margin-bottom: 10px;" ng-hide="tabActived == 6">
+					                	
 					                	<span class="input-group-addon">ผู้บันทึก</span>
-								      	<select class="form-control" ng-model="formData.userSearchId" ng-options="option.id as option.showname for option in users" ng-change="changeOrderName()">
+					                	<select class="form-control" ng-model="formData.userRole" ng-options="option.id as option.name for option in roles" ng-change="changeRole()">
+								  	  		<option value="">--ทั้งหมด--</option>
+								  	  	</select>
+								  	  	
+								  	  	
+					                	<span class="input-group-addon"></span>
+								      	<select class="form-control" ng-model="formData.userSearchId" ng-options="option.id as option.showname for option in groupUsers" ng-change="changeOrderName()">
 								  	  		<option value="">--ทั้งหมด--</option>
 								  	  	</select>
 					                	
-										<span class="input-group-addon">ชื่อผู้ซื้อ</span>
+										<span class="input-group-addon">ผู้ซื้อ</span>
 								      	<select class="form-control" ng-model="formData.orderName" ng-options="option for option in orderNameLst" ng-change="changeOrderName()">
 								  	  		<option value="">--ทั้งหมด--</option>
 								  	  	</select>
