--- a/backend/src/main/webapp/app/views/dym_list/list_det.html
+++ b/backend/src/main/webapp/app/views/dym_list/list_det.html
@@ -45,11 +45,11 @@
 				<th style="width: 10%;">ตัวย่อ</th>
 				<th style="width: 20%;">ประโยคเต็ม</th>
 				<th style="width: 30%;">ความหมาย</th>
-				<!-- <th style="width: 10%;">Notice</th> -->
+				<th style="width: 10%;">RV</th>
 				<th style="width: 10%;">กรุ๊ป</th>
 				<th style="width: 10%;">สถานะ</th>
-				<th style="width: 10%;">เว้นการติดต่อ</th>
-				<th style="width: 10%;"></th>
+				<th style="width: 5%;">N/C</th>
+				<th style="width: 5%;"></th>
 			</tr>
 		<thead>
 		<tbody>
@@ -57,11 +57,7 @@
 			<td style="vertical-align: middle;" id="{{ item.id }}"><span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span></td>
 			<td style="vertical-align: middle;"><span editable-text="item.desc" e-name="desc" e-form="rowform">{{ item.desc }}</span></td>
 			<td style="vertical-align: middle;"><span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span></td>
-			<!-- <td style="vertical-align: middle;">
-				<span e-form="rowform" e-name="isPrintNotice" editable-checkbox="item.isPrintNotice" e-title="ปริ้น Notice">
-				    <i class="fa fa-print fa-lg user-status-enabled-icon" ng-show="item.isPrintNotice"></i> 
-				</span>
-			</td> -->
+			<td style="vertical-align: middle;"><span editable-text="item.relatedVal" e-name="relatedVal" e-form="rowform">{{ item.relatedVal }}</span></td>
 			<td>
 	      		<span editable-select="item.groupId" e-name="groupId" e-form="rowform" e-ng-options="g.id as g.name for g in dymListDetGroup">
 		          {{ item.groupId ? (dymListDetGroup | filter:{id:item.groupId})[0].name : ''}}
