--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -119,6 +119,13 @@
 								<div class="row" style="margin-top: 5px;">
 									<div class="col-md-12">
 										  
+										<div class="form-group input-group" ng-show="onApi > 0">
+										  	<span class="input-group-addon"><i class="fa fa-cloud-upload"></i></span>
+										  	<select style="width: 115px;" name="column" class="form-control" ng-model="formData.apiUploadStatus" ng-options="option.id as option.text for option in apiUploadStatuses" ng-change="search()">
+												<option value="">--ทั้งหมด--</option>
+									  		</select>
+										</div>
+									    
 										<div class="form-group input-group">
 											<span class="input-group-addon">Code</span>
 											<div class="input-group">
@@ -186,8 +193,9 @@
 							<thead>
 								<tr style="background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-									<th style="text-align: center; white-space: nowrap;"><i class="fa fa-cloud-upload fa-fw" title="ผลการส่งข้อมูล"></i></th>
-									<!-- <th style="text-align: center">Hist.</th> -->
+									<th style="text-align: center; white-space: nowrap;" ng-show="onApi > 0">
+										<i class="fa fa-cloud-upload fa-fw" title="ผลการส่งข้อมูล"></i>
+									</th>		
 									<th style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder('createdDateTime')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											วันที่ติดตาม&nbsp;
@@ -261,7 +269,7 @@
 									<td style="vertical-align: middle; text-align: center;">
 										{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 									</td>
-									<td style="text-align: center; white-space: nowrap;">									
+									<td style="text-align: center; white-space: nowrap;" ng-show="onApi > 0">
 										<span title="{{ data.uploadStatusDesc }}" ng-hide="data.uploadStatusCode == '0000I'">
 										{{ data.uploadStatusCode }}
 										</span>
