--- a/backend/src/main/webapp/app/views/trace_result_import/main.html
+++ b/backend/src/main/webapp/app/views/trace_result_import/main.html
@@ -131,8 +131,8 @@
 									<td>{{ data.rowNum | number:0 }}</td>		
 									<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 									<td>
-										<i class="fa fa-cloud-upload fa-fw" ng-show="data.isAPIUpload" title="API Upload"></i>
-										<i class="fa fa-times fa-lg user-action-icon-danger" ng-hide="data.isAPIUpload" ng-click="deleteItem(data.id)"></i>&emsp; 
+										<i class="fa fa-cloud-upload fa-fw" ng-show="data.isAPIUpload" title="API Upload">&nbsp;<strong style="color: #c9302c">{{ data.proceededCound }}</strong></i>
+										<i class="fa fa-times fa-lg user-action-icon-danger" ng-hide="data.isAPIUpload" ng-click="deleteItem(data.id)"></i>&emsp;
 									</td>
 								</tr>
 							</tbody>
