--- a/backend/src/main/webapp/app/views/working/sub/func_1.html
+++ b/backend/src/main/webapp/app/views/working/sub/func_1.html
@@ -1,24 +1,122 @@
-{{ func }} <br />
-<input name="name" ng-model="func" />
-<button ng-click="submit()">Click</button><br />
-<span>{{ result }}</span>
+<style>
+.fullwidth .editable-wrap {
+    width: 100%;
+}
+.editable-controls {
+	width: 100%;
+}
+.bootstrap-datetimepicker-widget {
+	/* position: relative; */
+	/* bottom: 220px !important; */
+}
+.payType {
+	width: auto;
+}
+</style>
 
-<div class="function">
-	<div class="modal fade" id="mayfender">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title">Modal title</h4>
-	      </div>
-	      <div class="modal-body">
-	        <p>One fine body&hellip;</p>
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="button" class="btn btn-primary">Save changes</button>
-	      </div>
-	    </div><!-- /.modal-content -->
-	  </div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
+<div class="panel panel-info" style="margin: 0;">
+	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+			{{'pagination.page' | translate}}: {{askModalObj.init.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ forecastObj.totalItems | number:0 }} {{'pagination.items' | translate}})
+		</span>
+		
+		<div style="position: absolute; left: 50%;">
+			<div style="position: relative; left: -50%;">
+				<span class="badge" style="background-color: #356190; font-weight: 500; padding: 7px 7px; border-radius: 4px;">
+					<i class="fa fa-sticky-note" style="color: #fccf7c;"></i>
+					&nbsp;&nbsp;&nbsp;{{ other.lastTabActionMenuActive.name }}&nbsp;&nbsp;&nbsp;
+					<i class="fa fa-sticky-note" style="color: #fccf7c;"></i>
+				</span>
+			</div>
+		</div>
+		
+		<pagination ng-change="forecastObj.find()" total-items="forecastObj.totalItems"
+					first-text="{{'pagination.first' | translate}}"
+					previous-text="{{'pagination.previous' | translate}}"
+					next-text="{{'pagination.next' | translate}}"
+					last-text="{{'pagination.last' | translate}}"
+					ng-model="forecastObj.currentPage" items-per-page="forecastObj.itemsPerPage"
+					max-size="forecastObj.maxSize" class="pagination-sm pull-right" boundary-links="true"
+					rotate="false" num-pages="numPages" style="margin: auto;" />
+		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="forecastObj.itemsPerPage" 
+					ng-change="forecastObj.changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+		</span>
+	</div>
+</div>
+
+<div class="table-responsive" style="padding: 0; min-height: 223px;">
+	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
+		<thead>
+			<tr style="color: #337AB7; background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
+				<th style="width: 3%; text-align: center; white-space: nowrap;">#</th>
+				<th style="width: 13%; text-align: center; white-space: nowrap;">วันที่บันทึก</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">ประเภทการชำระ</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">งวดที่ชำระ</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">วันนัดชำระ</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">ยอดนัดชำระ</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">เปอร์เซ็นการชำระ</th>
+				<th style="width: 10%; text-align: center; white-space: nowrap;">ยอดชำระจริง</th>
+				<th style="text-align: center; white-space: nowrap;">หมายเหตุ</th>
+				<th style="text-align: center; white-space: nowrap;">ผู้บันทึก</th>
+				<th style="width: 80px; text-align: center;"></th>
+			</tr>
+		<thead>
+		<tbody>
+			<tr ng-repeat="item in forecastObj.items">
+				<td style="white-space: nowrap; text-align: center;">
+					<span ng-show="item._id">
+						{{ $index + (forecastObj.inserted ? 0 : 1) + ((forecastObj.currentPage - 1) * forecastObj.itemsPerPage) }}
+					</span>
+				</td>
+				<td style="white-space: nowrap; vertical-align: middle; text-align: center;">{{ item.createdDateTime | date:gb_dateTimeFormat }}</td>
+		      	<td style="white-space: nowrap; vertical-align: middle;">
+			        <span editable-select="item.payType" e-name="payType" e-class="payType" e-form="rowform" e-required e-ng-options="s as s.name for s in forecastObj.payTypeList track by s.name" e-ng-change="item.payType = $data">
+			        	<!-- {{ item.payTypeId ? (forecastObj.payTypeList | filter:{id:item.payTypeId})[0].name : ''}} -->
+			        	{{ item.payType.name }}
+			        </span>
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
+			        <span editable-text="item.round" e-name="round" e-type="number" e-form="rowform" e-ng-show="item.payType.isRound" e-style="width: 50px;" e-title="งวดที่">
+			        	{{ item.payType.isRound ? ((item.round && item.totalRound) ? (item.round + '/' + item.totalRound) : '') : '-' }}
+			        </span>&nbsp;
+			        <span editable-text="item.totalRound" e-name="totalRound" e-type="number" e-form="rowform" e-ng-show="item.payType.isRound" e-style="width: 50px;" e-title="จำนวนงวดทั้งหมด"></span>
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;" ng-class="{'has-error':appointDateErr}">
+			        <span e-title="กรุณากรอกข้อมูล" editable-text="item.appointDate" e-id="appointDate_index_{{$index}}" e-name="appointDate" e-form="rowform" e-style="width: 130px; font-size: 0.9em;" e-class="form-control forecastAppointDate" e-date-parser="dd/MM/yyyy HH:mm">
+			        	{{ item.appointDate | date:gb_dateTimeFormat }}
+			        </span>
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;" ng-class="{'has-error':appointAmountErr}">
+			        <span e-title="กรุณากรอกข้อมูล" editable-text="item.appointAmount" e-name="appointAmount" e-form="rowform" e-type="number">{{ item.appointAmount | number:2 }}</span>
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
+			        <span editable-text="item.forecastPercentage" e-name="forecastPercentage" e-form="rowform" e-type="number">{{ item.forecastPercentage ? (item.forecastPercentage + '%') : '' }}</span>
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
+			        <span editable-text="item.paidAmount" e-name="paidAmount" e-form="rowform" e-type="number">{{ item.paidAmount ? (item.paidAmount | number:2) : '' }}</span>
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle; min-width: 300px;" class="fullwidth">
+			        <span editable-text="item.comment" e-name="comment" e-form="rowform">{{ item.comment }}</span>
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle;">
+			        {{ createdByLog == 1 ? item.taskDetail.sys_owner : item.createdByName }}
+		      	</td>
+		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
+		      		<form editable-form id="rowform" name="rowform" onbeforesave="forecastObj.saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="forecastObj.inserted == item">
+			          <i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item._id != null ? rowform.$cancel() : forecastObj.cancelNewItem(item)" title="ยกเลิก"></i>&nbsp;
+			          <i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
+			        </form>
+			        <div class="buttons" ng-show="!rowform.$visible">
+			          <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="forecastObj.removeItem(item._id)" title="ลบ" ng-show="isEditable"></i>&nbsp;
+			          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="forecastObj.edit(rowform)" title="แก้ใข" ng-show="isEditable"></i>&nbsp;
+			        </div>  
+		      	</td>
+			</tr>
+		</tbody>
+	</table>
+	<button type="button" class="btn btn-primary btn-circle" ng-click="forecastObj.addItem()" 
+			ng-show="forecastObj.currentPage == 1" ng-disabled="forecastObj.inserted" style="margin-top: 10px; margin-left: 8px;">
+		<i class="fa fa-plus"></i>
+	</button>
 </div>
