--- a/backend/src/main/webapp/app/views/fields_setting/list.html
+++ b/backend/src/main/webapp/app/views/fields_setting/list.html
@@ -31,10 +31,10 @@
 			<thead>
 				<tr style="color: #337AB7;">
 					<th style="width: 45%;">Name</th>
-					<th style="width: 20%;">Alias</th>
+					<th style="width: 15%;">Alias</th>
 					<th style="width: 15%;">Function</th>
 					<th style="width: 10%;">Status</th>
-					<th style="width: 10%;"></th>
+					<th style="width: 15%;"></th>
 				</tr>
 			<thead>
 			<tbody>
@@ -70,9 +70,10 @@
 							<i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
 						</form>
 						<div class="buttons" ng-show="!rowform.$visible">
-							<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ" ng-show="group0"></i>&nbsp; 
-							<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="group0"></i>&nbsp;
-							<i class="fa fa-arrow-circle-right fa-lg user-action-icon-primary" ng-click="gotoSetting1(item.id, item.name)"></i>
+							<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ" ng-show="group0"></i>&nbsp;&nbsp; 
+							<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="group0"></i>&nbsp;&nbsp;
+							<i class="fa fa-desktop fa-lg user-action-icon-primary" title="Fields"></i>&nbsp;&nbsp;							
+							<i class="fa fa-upload fa-lg user-action-icon-primary" title="Import" ng-click="gotoSetting1(item.id, item.name)"></i>
 						</div>
 					</td>
 				</tr>
