--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -1,4 +1,4 @@
-<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate style="margin-top: 15px; color: #337AB7;">
+<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate style="margin-top: 15px; color: #337AB7;" autocomplete="off">
 		<div class="col-md-6">
 			<div class="row">
 				<div class="col-md-6">
@@ -40,7 +40,7 @@
 				<div class="col-md-6">
 					<div class="form-group" ng-class="{'has-error':addUserForm.firstName.$invalid}">
 					
-						<label class="control-label">ชื่อ</label>
+						<label class="control-label">ชื่อ-ไทย</label>
 						<div class="input-group">
 							<div class="input-group-btn">
 						        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ titleShow }} <span class="caret"></span></button>
@@ -53,7 +53,7 @@
 						
 					</div>
 					<div class="form-group" ng-class="{'has-error':addUserForm.lastName.$invalid}">
-						<label class="control-label">สกุล</label>
+						<label class="control-label">สกุล-ไทย</label>
 						<input name="lastName" class="form-control" ng-model="user.lastName">
 					</div>
 					<div class="form-group">
@@ -116,7 +116,20 @@
                  </label>
              </div>
 		</div> -->
-		<div class="col-md-2">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="form-group">
+						<label class="control-label">ชื่อ-อังกฤษ</label>
+						<input name="firstNameEng" class="form-control" ng-model="user.firstNameEng">
+					</div>
+					<div class="form-group">
+						<label class="control-label">สกุล-อังกฤษ</label>
+						<input name="lastNameEng" class="form-control" ng-model="user.lastNameEng">
+					</div>
+				</div>
+			</div>
+		
 			<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px;" ng-show="imageSource">		
 		</div>
 		<div class="row">
