--- a/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
+++ b/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
@@ -17,7 +17,7 @@
 						<thead>
 							<tr>
 								<th style="width: 30%; text-align: right;">ประเถท</th>
-								<th style="width: 70%">ราคา</th>
+								<th style="width: 70%">ยอดซื้อ</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -26,7 +26,7 @@
 								<td>{{ ech.price | number:2 }}</td>
 							</tr>
 							<tr style="font-weight: 700;">
-								<td style="text-align: right;">ยอดซื้อทั้งหมด</td>
+								<td style="text-align: right;">ยอดซื้อรวม</td>
 								<td>
 									<span>{{ totalPriceSum[rc.id] | number:2 }}</span>
 								</td>
