--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -1,3 +1,9 @@
+<style>
+	.tabh-style a {
+		color: #cccccc;
+	}
+</style>
+
 <div>
 	<div class="row">
 		<div class="col-md-12">
@@ -11,57 +17,83 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="panel gambler-panel">
-                <div class="panel-body">
-	                <div class="form-group input-group input-group-sm" style="margin-bottom: 10px;" ng-hide="tabActived == 6">
-	                	<span class="input-group-addon">งวดที่</span>
-				      	<select class="form-control" ng-model="formData.period" ng-options="option._id as option.periodDateTime | date:'dd/MM/yyyy' for option in periods" ng-change="changePeriod()"></select>
-				    	
-	                	<span class="input-group-addon">ผู้บันทึก</span>
-	                	<select class="form-control" ng-model="formData.userRole" ng-options="option.id as option.name for option in roles" ng-change="changeRole()"></select>
-				  	  	
-	                	<span class="input-group-addon"></span>
-				      	<select class="form-control" ng-model="formData.userSearchId" ng-options="option.id as option.showname for option in groupUsers" ng-change="changeOrderName()" ng-disabled="formData.userRole == 3">
-				  	  		<option value="">--{{ formData.userRole == 1 ? 'กรุณาเลือก' : 'ทั้งหมด'}}--</option>
-				  	  	</select>
-	                	
-						<span class="input-group-addon">ผู้ซื้อ</span>
-				      	<select class="form-control" ng-model="formData.orderName" ng-options="option for option in orderNameLst" ng-change="changeOrderName()" ng-disabled="formData.userRole == 1">
-				  	  		<option value="">--{{ formData.userRole == 3 ? 'กรุณาเลือก' : 'ทั้งหมด'}}--</option>
-				  	  	</select>
-				  	  	
-						<span class="input-group-addon">ราคา</span>
-				      	<select class="form-control" ng-model="formData.priceList" ng-options="option.id as option.priceListName for option in priceList" ng-change="changePriceList()"></select>
-				    </div>
-					<div style="margin-top: 30px; min-height: 422px;">
-						<table class="table table-bordered">
-							<thead>
-								<tr>
-									<th style="width: 25%; text-align: center;">ประเถท</th>
-									<th style="width: 25%; text-align: center;">ยอดซื้อ</th>
-									<th style="width: 25%; text-align: center;">ส่วนลด %</th>
-									<th style="width: 25%; text-align: center;">ยอดซื้อ หัก ส่วนลด</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr ng-repeat="pay in paymentDataList">
-									<td style="text-align: right;">{{ pay.title }}</td>
-									<td style="text-align: right;">{{ pay.value | number:2 }}</td>
-									<td style="text-align: center;">{{ priceData[pay.percent] }}</td>
-									<td style="text-align: right;">{{ pay.discount | number:2 }}</td>
-								</tr>
-								<tr style="font-weight: 700;">
-									<td style="text-align: center;">ยอดซื้อรวม</td>
-									<td style="text-align: center;">
-										<span>{{ sum | number:2 }}</span>
-									</td>
-									<td></td>
-									<td style="text-align: center;">
-										<span>{{ sumDiscount | number:2 }}</span>
-									</td>
-								</tr>
-							</tbody>
-						</table>
+                <div class="panel-body" style="min-height: 584px;">
+                
+                
+                
+                	<ul class="nav nav-tabs tabh-style" style="font-size: 12px; background-color: #2C2B2B; border-radius: 5px;">
+	                     <li ng-class="{'active': tabActived == 0}" ng-click="changeTab(0)"><a href="" data-toggle="tab">สรุปรายบุคคล</a></li>
+	                     <!-- <li ng-class="{'active': tabActived == 1}" ng-click="changeTab(1)"><a href="" data-toggle="tab">สรุปรวม</a></li> -->
+					</ul>
+                
+                
+					<div class="tab-content" style="padding-top: 10px;">
+						<div class="tab-pane fade" id="home-pills" ng-class="{'active in': tabActived == 0}">	
+			                <div class="form-group input-group input-group-sm" style="margin-bottom: 10px;">
+			                	<span class="input-group-addon">งวดที่</span>
+						      	<select class="form-control" ng-model="formData.period" ng-options="option._id as option.periodDateTime | date:'dd/MM/yyyy' for option in periods" ng-change="changePeriod()"></select>
+						    	
+			                	<span class="input-group-addon">ผู้บันทึก</span>
+			                	<select class="form-control" ng-model="formData.userRole" ng-options="option.id as option.name for option in roles" ng-change="changeRole()"></select>
+						  	  	
+			                	<span class="input-group-addon"></span>
+						      	<select class="form-control" ng-model="formData.userSearchId" ng-options="option.id as option.showname for option in groupUsers" ng-change="changeOrderName()" ng-disabled="formData.userRole == 3">
+						  	  		<option value="">--{{ formData.userRole == 1 ? 'กรุณาเลือก' : 'ทั้งหมด'}}--</option>
+						  	  	</select>
+			                	
+								<span class="input-group-addon">ผู้ซื้อ</span>
+						      	<select class="form-control" ng-model="formData.orderName" ng-options="option.id as option.name for option in orderNameLst" ng-change="changeOrderName()" ng-disabled="formData.userRole == 1">
+						  	  		<option value="">--{{ formData.userRole == 3 ? 'กรุณาเลือก' : 'ทั้งหมด'}}--</option>
+						  	  	</select>
+						  	  	
+								<span class="input-group-addon">ราคา</span>
+						      	<select class="form-control" ng-model="formData.priceList" ng-options="option.id as option.priceListName for option in priceList" ng-change="changePriceList()"></select>
+						    </div>
+							<div>
+								<table class="table table-bordered">
+									<thead>
+										<tr>
+											<th style="width: 25%; text-align: center;">ประเถท</th>
+											<th style="width: 25%; text-align: center;">ยอดซื้อ</th>
+											<th style="width: 25%; text-align: center;">ส่วนลด %</th>
+											<th style="width: 25%; text-align: center;">ยอดซื้อ หัก ส่วนลด</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr ng-repeat="pay in paymentDataList">
+											<td style="text-align: right;">{{ pay.title }}</td>
+											<td style="text-align: right;">{{ pay.value | number:2 }}</td>
+											<td style="text-align: center;">{{ priceData[pay.percent] }}</td>
+											<td style="text-align: right;">{{ pay.discount | number:2 }}</td>
+										</tr>
+										<tr style="font-weight: 700;">
+											<td style="text-align: center;">ยอดซื้อรวม</td>
+											<td style="text-align: center;">
+												<span>{{ sum | number:2 }}</span>
+											</td>
+											<td></td>
+											<td style="text-align: center;">
+												<span>{{ sumDiscount | number:2 }}</span>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+						
+						<div class="tab-pane fade" id="home-pills" ng-class="{'active in': tabActived == 1}">
+							<div class="form-group input-group input-group-sm" style="margin-bottom: 10px;">
+			                	<span class="input-group-addon">งวดที่</span>
+						      	<select class="form-control" ng-model="formData.period" ng-options="option._id as option.periodDateTime | date:'dd/MM/yyyy' for option in periods"></select>
+						    </div>
+						    
+						    Pending...
+						    
+						</div>
 					</div>
+                
+                
+                
                 </div>
 			</div>
 		</div>
