--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -29,7 +29,7 @@
                 
 					<div class="tab-content" style="padding-top: 10px;">
 						<div class="tab-pane fade" id="home-pills" ng-class="{'active in': tabActived == 0}">	
-			                <div class="form-group input-group input-group-sm" style="margin-bottom: 10px;">
+			                <div class="form-group input-group" style="margin-bottom: 10px;">
 			                	<span class="input-group-addon">งวดที่</span>
 						      	<select class="form-control" ng-model="formData.period" ng-options="option._id as option.periodDateTime | date:'dd/MM/yyyy' for option in periods" ng-change="changePeriod()"></select>
 						    	
@@ -52,11 +52,11 @@
 							<div>
 								<table class="table table-bordered">
 									<thead>
-										<tr>
-											<th style="width: 25%; text-align: center;">ประเถท</th>
-											<th style="width: 25%; text-align: center;">ยอดซื้อ</th>
-											<th style="width: 25%; text-align: center;">ส่วนลด %</th>
-											<th style="width: 25%; text-align: center;">ยอดซื้อ หัก ส่วนลด</th>
+										<tr style="font-size: 1.3em;">
+											<th style="width: 25%; text-align: center; font-weight: 500;">ประเถท</th>
+											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อ</th>
+											<th style="width: 25%; text-align: center; font-weight: 500;">ส่วนลด %</th>
+											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อ หัก ส่วนลด</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -66,13 +66,13 @@
 											<td style="text-align: center;">{{ priceData[pay.percent] }}</td>
 											<td style="text-align: right;">{{ pay.discount | number:2 }}</td>
 										</tr>
-										<tr style="font-weight: 700;">
+										<tr style="font-size: 1.3em;">
 											<td style="text-align: center;">ยอดซื้อรวม</td>
-											<td style="text-align: center;">
+											<td style="text-align: center; background-color: #ccc; color: black;">
 												<span>{{ sum | number:2 }}</span>
 											</td>
 											<td></td>
-											<td style="text-align: center;">
+											<td style="text-align: center; background-color: #ccc; color: black;">
 												<span>{{ sumDiscount | number:2 }}</span>
 											</td>
 										</tr>
