--- a/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
+++ b/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
@@ -16,7 +16,7 @@
 					<table class="table table-bordered">
 						<thead>
 							<tr>
-								<th style="width: 30%; text-align: right;">ประเถท</th>
+								<th style="width: 30%; text-align: right;">ประเภท</th>
 								<th style="width: 70%">ยอดซื้อ</th>
 							</tr>
 						</thead>
