--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -53,7 +53,7 @@
 								<table class="table table-bordered">
 									<thead>
 										<tr style="font-size: 1.3em;">
-											<th style="width: 25%; text-align: center; font-weight: 500;">ประเถท</th>
+											<th style="width: 25%; text-align: center; font-weight: 500;">ประเภท</th>
 											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อ</th>
 											<th style="width: 25%; text-align: center; font-weight: 500;">ส่วนลด %</th>
 											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อ หัก ส่วนลด</th>
