--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -78,22 +78,24 @@
 								<table class="table table-fixed gambler-panel result-panel table-hover">
 									<thead>
 										<tr>
-											<th style="width: 25%; text-align: center; font-weight: 500;">ชื่อ</th>
-											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อ</th>
+											<th style="width: 5%; text-align: center; font-weight: 500;">#</th>
+											<th style="width: 30%; text-align: center; font-weight: 500;">ชื่อ</th>
+											<th style="width: 20%; text-align: center; font-weight: 500;">ยอดซื้อ</th>
 											<th style="width: 25%; text-align: center; font-weight: 500;">ราคา</th>
-											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อ หัก ส่วนลด</th>
+											<th style="width: 20%; text-align: center; font-weight: 500;">ยอดซื้อ หัก ส่วนลด</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr ng-repeat="pay in paymentAllData">
-											<td style="width: 25%; text-align: left; height: 47px;">{{ ($index + 1) + '. ' + pay.name }}</td>
-											<td style="width: 25%; text-align: right; height: 47px;">{{ pay.sum | number:2 }}</td>
+											<td style="width: 5%; text-align: center; height: 47px;">{{ ($index + 1) + '. ' }}</td>
+											<td style="width: 30%; text-align: left; height: 47px;">{{ pay.name }}</td>
+											<td style="width: 20%; text-align: right; height: 47px;">{{ pay.sum | number:2 }}</td>
 											<td style="width: 25%; text-align: center; height: 47px;">
 												<select class="form-control input-sm" ng-model="pay.priceList" ng-options="option.id as option.priceListName for option in priceList" ng-change="test()">
 													<option value="">--กรุณาเลือก--</option>
 												</select>
 											</td>
-											<td style="width: 25%; text-align: right; height: 47px;"></td>
+											<td style="width: 20%; text-align: right; height: 47px;"></td>
 										</tr>
 									</tbody>
 								</table>
