--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -68,7 +68,7 @@
 							
 							 <div class="form-group input-group" style="margin-bottom: 10px;">
 			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ยอดซื้อรวม</span>
-			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ adminSum | number:2 }}</span>
+			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ (adminSum + customerSum) | number:2 }}</span>
 			                	
 			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ยอดซื้อ หัก ส่วนลดรวม</span>
 			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ adminSum | number:2 }}</span>
@@ -88,7 +88,7 @@
 									<tbody>
 										<tr ng-repeat="pay in paymentAllData">
 											<td style="width: 5%; text-align: center; height: 47px;">{{ ($index + 1) + '. ' }}</td>
-											<td style="width: 30%; text-align: left; height: 47px;">{{ pay.name }}</td>
+											<td style="width: 30%; text-align: left; height: 47px;">{{ pay.isCustomer }} : {{ pay.name }}</td>
 											<td style="width: 20%; text-align: right; height: 47px;">{{ pay.sum | number:2 }}</td>
 											<td style="width: 25%; text-align: center; height: 47px;">
 												<select class="form-control input-sm" ng-model="pay.priceList" ng-options="option.id as option.priceListName for option in priceList" ng-change="test()">
