--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -32,12 +32,18 @@
 }
 /* Table header fixed schroll */
 
+.cutom-select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+}
+
 @media print {
     .table-fixed tbody {
     	height: 100%;
     }
 }
-
 </style>
 
 <div>
@@ -141,7 +147,7 @@
 						  	  	</select>
 						  	  	
 								<span class="input-group-addon">ราคา</span>
-						      	<select class="form-control" ng-model="formData.priceList" disabled="disabled" ng-options="option.id as option.priceListName for option in priceList">
+						      	<select class="form-control cutom-select" ng-model="formData.priceList" disabled="disabled" ng-options="option.id as option.priceListName for option in priceList">
 						      		<option value="">----</option>
 						      	</select>
 						    </div>
